# gbase32

./: Makefile.am  configure.ac
lib/: Makefile.am  gbase32.c  gbase32.h
src/: Makefile.am  main.c
